# 3DSoftwareRenderer

./: .gitignore  Cargo.toml  README.md
src/: action.rs  algorithm.rs  app.rs  inputs.rs  lib.rs
src/graphics/: mod.rs  screen.rs  window.rs
src/pipeline/: geometry.rs  mod.rs  rasterizer.rs  shader.rs  transforms.rs
src/resources/: loaders.rs  mesh.rs  mod.rs  texture.rs
src/scene/: camera.rs  light.rs  mod.rs
