[package]
name = "soft_rend"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = {version = "0.30.3", features = ["glam-assert"]}     # Math library for 2-3-4D vectors, matrices.
ndarray = "0.16.1"  # For working with n-dimensional arrays (probably won't use it).
winit = "0.30.10"   # To manage windows, keyboard and mouse.
pixels = "0.15.0"   # To draw pixels on the screen.
pollster = "0.4.0"  # To block on async functions (used to wait for pixels to initialzie).
rayon = "1.10.0"    # Parallelism for CPU tasks.

[profile.release]
debug = true # Allows for debug symbols to show up for profiling.
